<resources>
    <string name="app_name">phoenix</string>
    <string name="tab_home">首页</string>
    <string name="tab_contract">合约</string>
    <string name="tab_exchange">兑币</string>
    <string name="tab_community">社区</string>
    <string name="tab_mine">我的</string>
    <string name="exchange_coin">币币兑换</string>
    <string name="right_arrow">→</string>
    <string name="exchange_rate">汇率</string>
    <string name="usable">可用：</string>
    <string name="usable2">可用</string>
    <string name="exchange_by_coin">按%s兑换</string>
    <string name="all">全部</string>
    <string name="estimate_available">预估可得：</string>
    <string name="BTC">BTC</string>
    <string name="USDT">USDT</string>
    <string name="ETH">ETH</string>
    <string name="exchange_now">立即兑换</string>
    <string name="digital_currency">数字货币</string>
    <string name="new_guide">新人指南</string>
    <string name="invite_friends">邀请好友</string>
    <string name="recharge">充值</string>
    <string name="platform_introduction">平台介绍</string>
    <string name="up_arrow">↑</string>
    <string name="down_arrow">↓</string>
    <string name="my_position">我的持仓</string>
    <string name="currency_name" translatable="false"><![CDATA[<font color="#000000">%s</font><font color="#7A8189">/USDT</font>]]></string>
    <string name="str_login_mobile">手机登录</string>
    <string name="str_login_input_mobile_hint">请输入手机号</string>
    <string name="str_login_input_pws_hint">请输入密码</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="str_login_no_account_tip">还没有账号？</string>
    <string name="str_login_to_register">快速注册</string>
    <string name="apply_to_be_trader">申请成为交易员</string>
    <string name="str_register_mobile">手机注册</string>
    <string name="str_login_have_account_tip">已有账号？</string>
    <string name="str_login_to_login">快速登录</string>
    <string name="str_verify_sms_code">短信验证</string>
    <string name="sms_error_tips">验证码错误或密码无效</string>
    <string name="str_login_set_pwd_hint">请输入8～20位含数字、字母密码</string>
    <string name="str_login_invite_code_hint">邀请码（选填）</string>
    <string name="str_forgot_pwd">重置密码</string>
    <string name="str_login_input_sms_hint">请输入验证码</string>
    <string name="forgot_pwd_warning">为了您的资金安全，密码重置后24小时内不能提币！</string>
    <string name="total_assets_converted">总资产折合</string>
    <string name="funds_account">资金账户</string>
    <string name="full_account">全仓账户</string>
    <string name="withdraw">提币</string>
    <string name="funds_transfer">资金划转</string>
    <string name="my_bonus">我的赠金</string>
    <string name="documentary_management">跟单管理</string>
    <string name="recommend_documentary">推荐跟单</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="help_center">帮助中心</string>
    <string name="my_inviter">我的邀请人</string>
    <string name="security_center">安全中心</string>
    <string name="settings">设置</string>
    <string name="about_us">关于我们</string>
    <string name="funds">资金</string>
    <string name="standard_full">标准全仓</string>
    <string name="wallet_balance">钱包余额</string>
    <string name="account_full_tip_one">当前正在使用合约逐仓模式。全仓账户资金仅在切换为合约全仓时启用。立即切换</string>
    <string name="account_nv">账户净值</string>
    <string name="usable_margin">可用保证金</string>
    <string name="position_margin">仓位保证金</string>
    <string name="account_full_tip_two">当前正在使用合约全仓模式。合约开仓、平仓将会使用该账户下的资金。</string>
    <string name="contract_mode_setting">合约模式设置</string>
    <string name="operate_caution">操作提醒</string>
    <string name="operate_caution_content">逐仓模式合约，合约交易时默认使用逐仓保证金，并且使用资金账户资金。切换至全仓模式，使用合约全仓账户模式资金。有持仓合约或委托订单时不的切换合约模式。</string>
    <string name="warehouse_mode">逐仓模式</string>
    <string name="full_mode">全仓模式</string>
    <string name="block">冻结</string>
    <string name="funds_record">资产记录</string>
    <string name="show_last_30_days_data">为保障系统性能，仅展示近30天数据。</string>
    <string name="no_data">暂无数据</string>
    <string name="record_detail">记录详情</string>
    <string name="record_type">记录类型</string>
    <string name="service_fee">手续费</string>
    <string name="create_time">创建时间</string>
    <string name="coin_withdraw">%s提币</string>
    <string name="common_withdraw">普通提币</string>
    <string name="internal_transfer">内部转账</string>
    <string name="usable_balance">可用余额：</string>
    <string name="chain_name">链名称</string>
    <string name="erc_20">ERC20</string>
    <string name="omni">OMNI</string>
    <string name="address">地址</string>
    <string name="please_input_address">请输入地址</string>
    <string name="money">金额</string>
    <string name="please_input_withdraw_amount">请输入提币数量</string>
    <string name="note">备注</string>
    <string name="optional">选填</string>
    <string name="poundage">手续费</string>
    <string name="actual_arrival">实际到账</string>
    <string name="operate_caution2">操作提醒：</string>
    <string name="coin_recharge">%s充值</string>
    <string name="coin_recharge_address">%s  充值地址</string>
    <string name="click_copy">点击复制</string>
    <string name="user_guide_for_charging_and_withdrawing_COINS">充提币用户指引</string>
    <string name="recharge_and_withdraw_tips">在您进行“充币”和“提币”操作前，请您认真阅读该指引，加强防范意识，避免上当受骗，同时积极配合平台完成对反洗钱和反恐怖融资行为的打击。</string>
    <string name="i_read_and_agree">我已阅读并同意</string>
    <string name="user_guide_for_charging_and_withdrawing_COINS2">《充提币用户指引》</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="fund_rate">资金费率</string>
    <string name="settle_time">结算时间</string>
    <string name="high_max">最高</string>
    <string name="lowest">最低</string>
    <string name="minutes_one">1分钟</string>
    <string name="minutes_five">5分钟</string>
    <string name="minutes_fifteen">15分钟</string>
    <string name="minutes_thirteen">30分钟</string>
    <string name="more">更多</string>
    <string name="quota">指标</string>
    <string name="long_bullish">开多/看涨</string>
    <string name="short_bearish">开空/看跌</string>
    <string name="order">订单</string>
    <string name="equity">净值(%s)</string>
    <string name="unrealized_P_L">未实现盈亏(%s)</string>
    <string name="margin_rate">保证金率</string>
    <string name="available_margin">可用保证金</string>
    <string name="transfer_in_coin">转入%s</string>
    <string name="transfer_out_coin">转出%s</string>
    <string name="coin_withdraw_address">%s提币地址</string>
    <string name="add_new_address">添加新地址</string>
    <string name="add">添加</string>
    <string name="add_coin_address">添加%s地址</string>
    <string name="about_bonus">关于赠金</string>
    <string name="history">历史</string>
    <string name="be_use">待使用</string>
    <string name="entrust_record">委托记录</string>
    <string name="in_position">持仓中</string>
    <string name="share">分享</string>
    <string name="open_position_average">开仓均价</string>
    <string name="current_price">当前价</string>
    <string name="total_trade_amount">交易总金额</string>
    <string name="stop_gain_trigger_price">止盈触发价</string>
    <string name="funds_cost">资金费用</string>
    <string name="stop_trigger_price">止损触发价</string>
    <string name="open_position_time">开仓时间</string>
    <string name="forecast_strong_parity">预估强平价</string>
    <string name="check_full_stop">止盈止损</string>
    <string name="close_position">平仓</string>
    <string name="main_map">主图</string>
    <string name="second_map">副图</string>
    <string name="quota_settings">指标设置</string>
    <string name="hour_one">1小时</string>
    <string name="hour_four">4小时</string>
    <string name="one_day">1天</string>
    <string name="latest_deal">最新成交</string>
    <string name="delegate_list">委托列表</string>
    <string name="contract_info">合约信息</string>
    <string name="deal_time">成交时间</string>
    <string name="deal_direction">方向</string>
    <string name="deal_price">成交价格</string>
    <string name="deal_count">数量/BTC</string>
    <string name="direction_long">做多</string>
    <string name="direction_short">做空</string>
    <string name="long_count">做多数量</string>
    <string name="delegate_price">价格(1位小数)</string>
    <string name="short_count">做空数量</string>
    <string name="look_more">查看更多</string>
    <string name="price_source">价格来源</string>
    <string name="exchange_location">交易所</string>
    <string name="latest_price">最新价格</string>
    <string name="trade_info">交易信息</string>
    <string name="margin">保证金</string>
    <string name="max_leverage">最大杠杆</string>
    <string name="max_position">最大持仓</string>
    <string name="weight">权重</string>
    <string name="open">开多</string>
    <string name="close">开空</string>
    <string name="market">市价</string>
    <string name="trigger_plan">计划</string>
    <string name="vst_simulated_gold">VST帐户(模拟金)</string>
    <string name="leverage">杠杆</string>
    <string name="trigger">触发价</string>
    <string name="please_enter">请输入</string>
    <string name="trigger_tips">成交价：不限</string>
    <string name="available_balance_holder">可用：10000.0VST</string>
    <string name="estimate_value">预计成交价</string>
    <string name="advance">高级设置</string>
    <string name="account_btc">BTC账户</string>
    <string name="account_usdt">USDT账户</string>
    <string name="account_vst">VST账户(模拟金)</string>
    <string name="account_usdt_bonus">USDT赠金</string>
    <string name="PL">盈亏</string>
    <string name="user_close_position">用户平仓</string>
    <string name="close_position_average">平仓均价</string>
    <string name="close_position_time">平仓时间</string>
    <string name="capitalRate">资金费率</string>
    <string name="capitalRateNum">资金费率：0.042%</string>
    <string name="settlementTime">结算时间：8小时内</string>
    <string name="capital_rate_dialog_desc_1">1、资金费用对持仓时机超过1小时的订单进行费用结算。</string>
    <string name="capital_rate_dialog_desc_2">2、资金费率为正，收取资金费用，为负获得资金奖励。</string>
    <string name="capital_rate_dialog_desc_3">3、费用计算方式：交易总额 × 资金费率。</string>
    <string name="capital_rate_dialog_desc_4">4、每日0、8、16点进行一次费用结算（新加坡时间）</string>
    <string name="know">知道了</string>
    <string name="marketPrice">行情价格</string>
    <string name="market_price_dialog_desc_title">实时展示最新参与指数计算的价格源及权重。</string>
    <string name="market_price_dialog_desc_1">1、为降低价格恶意操纵、数据源平台不稳定 等风险，凤凰合约采用指数价格作为行情价格。</string>
    <string name="market_price_dialog_desc_2">2、系统根据价格与价格中位数的偏差量、价格源更新速度等，自动调整指数权重。</string>
    <string name="stop_profit_loss">止盈止损说明</string>
    <string name="stop_profit_loss_desc">由于市场价格、深度快速变动，触发止盈止损后，系统无法保证按照设定价格，或设置止盈止损价格(比例) 仅为触发价格(比例)，并非最终平仓价高或盈亏比例。</string>
    <string name="estimate_final_price">预估成交价</string>
    <string name="estimate_final_price_dialog_1">1、合约采用全市场对冲策略实现足量的深度，助您即时成交，快速把握行情。</string>
    <string name="estimate_final_price_dialog_2">2、市场实际对冲成交时，受盘口的价差、行情波动、市场流动性、交易费用等因素的影响，实际的成交价与指数价格可能存在点差。</string>
    <string name="estimate_final_price_dialog_3">3、行情剧烈时，成交点差将动态调整，以帮助您避免市场价格的滑点。</string>
    <string name="capital_cost">资金费用</string>
    <string name="estimate_capital_rate">预估费率：%s (平台奖励费率)</string>
    <string name="next_capital_cost">下次预估费用：%s VST</string>
    <string name="confirm_order">下单确认</string>
    <string name="history_order_detail">历史订单详情</string>
    <string name="margin_coin">保证金(s%)</string>
    <string name="total_trade_amount2">交易总额</string>
    <string name="trade_fee">交易手续费</string>
    <string name="in_entrust">委托中</string>
    <string name="trigger_price">触发价</string>
    <string name="entrust_time">委托时间</string>
    <string name="revoke">撤销</string>
    <string name="entrust_deal_price">委托成交价</string>
    <string name="order_position_detail_title">持仓详情</string>
    <string name="order_position_detail_high">高：</string>
    <string name="checkout_success">下单成功</string>
    <string name="checkout_success_dialog_desc">使用赠金的订单，将会在24小时后自动平仓，如需自行平仓，请提前操作。</string>
    <string name="commit">提交</string>
    <string name="inviter_account">被邀请人账号</string>
    <string name="level">等级</string>
    <string name="invite_time">邀请时间</string>
    <string name="accept_invite">接收邀请</string>
    <string name="no_invite_tips">您未被邀请，请输入邀请码接受邀请</string>
    <string name="my_inviter_tips">每人只能接受一次邀请</string>
    <string name="input_invite_code_hint">请输入邀请码，不区分大小写</string>
</resources>