<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/dialog_circle_bg_dp10"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/capitalRate"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="1dp"
            android:layout_width="160dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_dialog_simple"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/capitalRateNum"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/settlementTime"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/capital_rate_dialog_desc_1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/capital_rate_dialog_desc_2"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/capital_rate_dialog_desc_3"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/capital_rate_dialog_desc_4"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/know"
            style="@style/BlueButtonStyle"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>