<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#282D3D"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/horizontal_space"
    android:paddingVertical="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/inviter_account"
        android:textColor="@color/text_main_gray"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@color/text_main_gray"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/invite_time"
        android:textColor="@color/text_main_gray"
        android:textSize="12sp" />
</LinearLayout>