<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:paddingHorizontal="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_available_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_balance_holder"
        android:textColor="@color/text_main_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge"
        android:textColor="@color/text_main_blue"
        android:layout_marginStart="6dp"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/tv_available_balance"
        app:layout_constraintTop_toTopOf="@+id/tv_available_balance" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_estimated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimate_value"
        android:layout_marginEnd="2dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_estimated_value"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_estimated_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_advance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="12dp"
        android:text="@string/advance"
        android:textSize="13sp"
        android:textColor="@color/text_main_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_available_balance" />
</androidx.constraintlayout.widget.ConstraintLayout>