<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/accept_invite"
        android:textColor="@color/text_main_black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/horizontal_space"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_gray"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_space"
        android:layout_marginTop="24dp"
        android:text="@string/no_invite_tips"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTips2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/my_inviter_tips"
        android:textColor="@color/blue_button_color"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/tvTips"
        app:layout_constraintTop_toBottomOf="@id/tvTips" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInviteCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_space"
        android:layout_marginTop="6dp"
        android:background="@drawable/gray_circle_bg_dp6"
        android:hint="@string/input_invite_code_hint"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:textColorHint="#BFBFC5"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvTips2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCommit"
        style="@style/BlueButtonStyle"
        android:layout_marginHorizontal="@dimen/horizontal_space"
        android:layout_marginTop="24dp"
        android:text="@string/commit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInviteCode" />
</androidx.constraintlayout.widget.ConstraintLayout>