<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/dialog_circle_bg_dp10"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="30dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_dialog_simple"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/checkout_success"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/checkout_success_dialog_desc"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/know"
            style="@style/BlueButtonStyle"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>